# ISIMA_Cours

./: README.md
Analyse numérique/: TP_etudiants.ipynb
Analyse numérique/__MACOSX/: ._TP_etudiants.ipynb
Architecture Logicielle/: Cours.md
Architecture Logicielle/TP1/: main.c
Architecture Logicielle/TP2/: main.c
Architecture Logicielle/TP3/: TP Noté RICHARD Corentin .circ
BDD/TP1 Facturation/: BDFacturation_queries.sql
BDD/mySQL/: docker-compose.yml
Communication/: Cours.md
CyberSécurité/: Cours.md
Développement Logiciel/: Cours.md
Développement Logiciel/tp1/: CMakeLists.txt  ExitPushButton.cpp  ExitPushButton.h  exitmessagebox.cpp  mainwindow.cpp  mainwindow.h
Développement Logiciel/tp3/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Gestion des Entreprises/: Cours.md
Modélisation et Outils de Génie Logiciel/: Cours.md
Modélisation et Outils de Génie Logiciel/tp3/: Dockerfile  main.cpp
Modélisation et Outils de Génie Logiciel/tp4/: CMakeLists.txt  DockerFile  serveur
Modélisation et Outils de Génie Logiciel/tp5/: CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp
POO/TD1/: Makefile  main  main.cpp
Programmation Système/: ex1  ex1.cpp  ex3  ex3.cpp
Système D'explotation/tp0/: helloworld.sh
Système D'explotation/tp3/: fusion.sh  numcat.sh  result.txt  test.txt  test2.txt  tp3.md  tri.sh
Système D'explotation/tp5/: consommateur.sh  ecrivain.sh  lecteur-ecrivain.sh  lecteur.sh  nom.txt  prodcons.sh  producteur.sh
Système D'explotation/tp6/: race.sh  reponse.md  set_font.sh  tee.sh  (+1 more)
Traitement du signal/: RichardHodin.ipynb
(+49 files in other folders)
